# ternary-birch

./: .gitignore  Makefile.am
lattice_db/: nipp1-256.txt  nipp257-270.txt  nipp271-300.txt  nipp301-322.txt  nipp323-345.txt  nipp346-400.txt  nipp401-440.txt  nipp441-480.txt  nipp481-500.txt  nipp501-513.txt
src/: .#Math.cpp  .#NeighborManager.h  .#SquareMatrix.inl  Eigenvector.h  Fp.cpp  Fp.h  Genus.h  Genus.inl  Isometry.cpp  Isometry.h  Isometry.inl  IsometrySequence.h  Makefile.am  Math.cpp  Math.h  Math.inl  Matrix.h  Matrix.inl  NeighborManager.h  NeighborManager.inl  NumberField.h  NumberField.inl  ParseNipp.cpp  ParseNipp.h  Polynomial.cpp  Polynomial.h  Polynomial.inl  QuadForm.cpp  QuadForm.h  QuadForm.inl  Rational.h  Rational.inl  Spinor.h  SquareMatrix.h  SquareMatrix.inl  birch.cpp  birch.h  birch_util.cpp  birch_util.h  setup.py  (+1 more)
